[tool.poetry]
name = "disguisedcats"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
svcs = "^24.1.0"
motor = "^3.4.0"
structlog = "^24.1.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
nanoid = "^2.0.0"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pytest = "^8.1.1"
mypy = "^1.9.0"
ipython = "^8.22.2"
typer = "^0.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
